--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_comites.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_comites.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c79f703b-bf01-4865-bd2b-701eb356ba3a">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="86"/>
+	<property name="ireport.zoom" value="1.7715610000000013"/>
+	<property name="ireport.x" value="305"/>
+	<property name="ireport.y" value="296"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -13,6 +13,9 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="IMAGE_PATH" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="USUARIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
@@ -76,7 +79,7 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="46" splitType="Stretch">
+		<band height="75" splitType="Stretch">
 			<staticText>
 				<reportElement x="336" y="2" width="130" height="20" uuid="d2820ed1-563c-4556-97e7-7f9324cc9b90"/>
 				<textElement>
@@ -85,21 +88,21 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 				<text><![CDATA[Reporte de Comites ]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="710" y="3" width="100" height="20" uuid="04e4df16-4b67-4340-8a24-945fe1331771"/>
+				<reportElement x="695" y="3" width="100" height="14" uuid="04e4df16-4b67-4340-8a24-945fe1331771"/>
 				<textElement>
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="681" y="21" width="80" height="20" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
+				<reportElement x="657" y="21" width="61" height="20" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
 				<textElement textAlignment="Right">
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="761" y="21" width="40" height="20" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
+				<reportElement x="726" y="21" width="35" height="20" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
 				<textElement>
 					<font fontName="SansSerif"/>
 				</textElement>
@@ -137,62 +140,86 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 				<reportElement x="17" y="24" width="100" height="20" uuid="389c1719-9f3d-441e-9550-b92970e4a3f4"/>
 				<text><![CDATA[rpt_cmte]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="660" y="43" width="44" height="20" uuid="8f4080e8-dbe2-4b30-9f43-82f8fbabddf6"/>
+				<text><![CDATA[Usuario:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="708" y="43" width="81" height="20" uuid="c2464fff-bc9f-4c3b-a4aa-56a405eea00c"/>
+				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="657" y="3" width="38" height="14" uuid="56b210b9-a783-49f8-9ce4-5ab259f720b2"/>
+				<text><![CDATA[Fecha:]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="54" splitType="Stretch">
 			<rectangle>
-				<reportElement x="7" y="22" width="794" height="32" backcolor="#FFFFFF" uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62"/>
+				<reportElement x="7" y="34" width="794" height="20" backcolor="#FFFFFF" uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62"/>
 			</rectangle>
 			<staticText>
 				<reportElement x="14" y="34" width="100" height="20" uuid="e3dcf82b-5ff6-4cd8-beed-a789d18846ba"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif" size="12" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="141" y="34" width="100" height="20" uuid="82b4c1ff-82b5-41e6-9f4d-416a004632e9"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif" size="12" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="271" y="34" width="100" height="20" uuid="3013f3b1-0485-44c2-8e02-c1b28b9f452f"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif" size="12" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Acuerdo]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="551" y="34" width="100" height="20" uuid="ff22621e-182f-4480-9973-78ff7fa9e390"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif" size="12" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="694" y="34" width="100" height="20" uuid="970e7ca7-832f-4f96-a6b9-963f678a40b6"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif" size="12" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="407" y="34" width="100" height="20" uuid="b0c4178c-b9e5-44a9-a803-d86696058694"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif" size="12" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Comite]]></text>
 			</staticText>
+			<line>
+				<reportElement x="140" y="34" width="1" height="20" uuid="c4fcf880-abce-49ec-a547-3b2558cd2771"/>
+			</line>
+			<line>
+				<reportElement x="267" y="34" width="1" height="20" uuid="153ccd9d-3432-4044-af05-7acaf3001689"/>
+			</line>
+			<line>
+				<reportElement x="550" y="34" width="1" height="20" uuid="2ef89dec-32c8-43ba-bcc8-d530435c6442"/>
+			</line>
+			<line>
+				<reportElement x="406" y="34" width="1" height="20" uuid="b5d44edf-3426-41f0-9b37-45a17f1b4910"/>
+			</line>
+			<line>
+				<reportElement x="691" y="34" width="1" height="20" uuid="cb4a9ca7-80cc-43ff-9384-040b1a0436bc"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="25" splitType="Stretch">
-			<rectangle>
-				<reportElement x="7" y="0" width="794" height="25" uuid="a3bb361a-70fd-4ee2-b8ea-77c86351b080"/>
-			</rectangle>
 			<textField>
 				<reportElement x="7" y="4" width="100" height="20" uuid="f0df6217-7549-481b-a72f-724465680625"/>
 				<textElement>
@@ -201,36 +228,36 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="133" y="4" width="100" height="20" uuid="28592223-1eac-441a-87f7-4c26d7e010b3"/>
-				<textElement>
+				<reportElement x="141" y="4" width="100" height="20" uuid="28592223-1eac-441a-87f7-4c26d7e010b3"/>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="263" y="4" width="100" height="20" uuid="95e53dcc-0bab-432d-923a-2bb8db742b27"/>
-				<textElement>
+				<reportElement x="271" y="4" width="100" height="20" uuid="95e53dcc-0bab-432d-923a-2bb8db742b27"/>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{numeroacuerdocomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="543" y="4" width="100" height="20" uuid="779232a7-bda8-4e32-ad57-bc01d87c4833"/>
-				<textElement>
+				<reportElement x="551" y="4" width="100" height="20" uuid="779232a7-bda8-4e32-ad57-bc01d87c4833"/>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="692" y="4" width="100" height="20" uuid="a345a786-0053-44fc-8fdc-b793c3dcc4f1"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="397" y="4" width="100" height="20" uuid="5c39e05e-6a51-468e-856f-bbcf005647b6"/>
-				<textElement>
+				<reportElement x="407" y="4" width="100" height="20" uuid="5c39e05e-6a51-468e-856f-bbcf005647b6"/>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrecomite}]]></textFieldExpression>
