--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_cumpleanieros.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_cumpleanieros.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0b5b5867-a333-4221-8d51-8566c397df3b">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="219"/>
-	<property name="ireport.y" value="183"/>
+	<property name="ireport.x" value="16"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -13,6 +13,9 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="IMAGE_PATH" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="USUARIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
@@ -57,14 +60,14 @@ INNER JOIN empleadopuesto ep on e.codigopuesto=ep.codigopuesto
 				<text><![CDATA[Ministrio de Justicia y Seguridad Pública]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="298" y="27" width="207" height="20" uuid="899bfa73-d18f-438c-962f-3734ac945ac9"/>
+				<reportElement x="320" y="23" width="167" height="20" uuid="899bfa73-d18f-438c-962f-3734ac945ac9"/>
 				<textElement>
 					<font fontName="SansSerif" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="358" y="50" width="86" height="20" uuid="c00dbbf8-4aeb-4a34-9450-34713d1be106"/>
+				<reportElement x="358" y="43" width="86" height="20" uuid="c00dbbf8-4aeb-4a34-9450-34713d1be106"/>
 				<textElement>
 					<font fontName="SansSerif" size="10" isBold="true"/>
 				</textElement>
@@ -81,7 +84,7 @@ INNER JOIN empleadopuesto ep on e.codigopuesto=ep.codigopuesto
 		</band>
 	</title>
 	<pageHeader>
-		<band height="61" splitType="Stretch">
+		<band height="76" splitType="Stretch">
 			<staticText>
 				<reportElement x="326" y="12" width="150" height="20" uuid="1c242fc5-d4af-4367-858c-26bfa7d0de2c"/>
 				<textElement>
@@ -90,28 +93,28 @@ INNER JOIN empleadopuesto ep on e.codigopuesto=ep.codigopuesto
 				<text><![CDATA[Reporte deCumpleañeros]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="683" y="6" width="100" height="20" uuid="f2ad1bcb-c3c2-4277-a5e9-22b43e400815"/>
+				<reportElement x="696" y="3" width="100" height="20" uuid="f2ad1bcb-c3c2-4277-a5e9-22b43e400815"/>
 				<textElement>
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="663" y="32" width="80" height="20" uuid="6f6aebf2-4c7e-4217-8dc3-90c3d50130ff"/>
+				<reportElement x="650" y="23" width="68" height="20" uuid="6f6aebf2-4c7e-4217-8dc3-90c3d50130ff"/>
 				<textElement textAlignment="Right">
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="743" y="32" width="40" height="20" uuid="486ff6df-1cbf-462d-be15-3c2767941e91"/>
+				<reportElement x="720" y="23" width="40" height="20" uuid="486ff6df-1cbf-462d-be15-3c2767941e91"/>
 				<textElement>
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="247" y="38" width="40" height="20" uuid="c7e12a67-cbab-476f-bda6-3d9087ae23f5"/>
+				<reportElement x="228" y="38" width="40" height="20" uuid="c7e12a67-cbab-476f-bda6-3d9087ae23f5"/>
 				<textElement>
 					<font fontName="SansSerif"/>
 				</textElement>
@@ -132,19 +135,41 @@ INNER JOIN empleadopuesto ep on e.codigopuesto=ep.codigopuesto
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="291" y="39" width="100" height="20" uuid="18b37d30-9f19-482a-9f5a-30066aac44b8"/>
+				<reportElement x="272" y="39" width="100" height="20" uuid="18b37d30-9f19-482a-9f5a-30066aac44b8"/>
 				<textElement>
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="657" y="3" width="36" height="20" uuid="5851c38a-80b5-43fa-979c-ed6dec0baf29"/>
+				<text><![CDATA[Fecha:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="659" y="43" width="47" height="20" uuid="39b29c6b-d689-4b11-a2e1-9e4042e888ff"/>
+				<text><![CDATA[Usuario:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="712" y="43" width="78" height="20" uuid="3b6581da-9108-4902-8fab-3ed5e6f1a862"/>
+				<textElement>
+					<font fontName="Sylfaen" size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="13" y="45" width="100" height="20" uuid="52f3af9b-feea-4a59-9041-0a544e0295d6"/>
+				<text><![CDATA[rpt_cump]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="35" splitType="Stretch">
+		<band height="24" splitType="Stretch">
+			<rectangle>
+				<reportElement x="3" y="0" width="799" height="24" uuid="655762c2-6957-4028-91fb-93dfcc0f540c"/>
+			</rectangle>
 			<staticText>
-				<reportElement x="36" y="0" width="100" height="20" uuid="f267bdee-809f-4ecd-8859-bce9719d477a"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<reportElement x="26" y="0" width="100" height="20" uuid="f267bdee-809f-4ecd-8859-bce9719d477a"/>
+				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="SansSerif" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha]]></text>
@@ -164,18 +189,27 @@ INNER JOIN empleadopuesto ep on e.codigopuesto=ep.codigopuesto
 				<text><![CDATA[Nombre de Ubicación Fisica]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="627" y="0" width="133" height="20" uuid="255aa8a9-dc67-4269-8886-8363c9ad2692"/>
-				<textElement>
+				<reportElement x="622" y="0" width="175" height="20" uuid="255aa8a9-dc67-4269-8886-8363c9ad2692"/>
+				<textElement textAlignment="Center">
 					<font fontName="SansSerif" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre de Empleado]]></text>
 			</staticText>
+			<line>
+				<reportElement x="206" y="0" width="1" height="24" uuid="f675da16-c4de-4719-ac19-81cc6a8f9444"/>
+			</line>
+			<line>
+				<reportElement x="390" y="0" width="1" height="24" uuid="640728f5-0273-40c6-ae52-dea691cc2046"/>
+			</line>
+			<line>
+				<reportElement x="619" y="0" width="1" height="24" uuid="5f8136a3-f089-47c4-8590-4a7c78faa57e"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch">
+		<band height="25" splitType="Stretch">
 			<textField>
-				<reportElement x="34" y="0" width="100" height="20" uuid="7ced5003-2994-4cb8-a099-24d350c02225"/>
+				<reportElement x="24" y="0" width="100" height="20" uuid="7ced5003-2994-4cb8-a099-24d350c02225"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
@@ -189,7 +223,7 @@ INNER JOIN empleadopuesto ep on e.codigopuesto=ep.codigopuesto
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="409" y="0" width="139" height="20" uuid="2090b7eb-6dcf-41d0-8778-03a521abd540"/>
+				<reportElement x="399" y="0" width="139" height="20" uuid="2090b7eb-6dcf-41d0-8778-03a521abd540"/>
 				<textElement textAlignment="Center">
 					<font fontName="SansSerif" size="10"/>
 				</textElement>
