--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_hijoscapesp.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_hijoscapesp.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="149"/>
-	<property name="ireport.y" value="234"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="51"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
 	<parameter name="FECHAFIN" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -10,11 +10,14 @@
 	<parameter name="IMAGE_PATH" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="USUARIO" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[select  e.codigoempleado, e.nombreempleado, p.tipodiscapacidad,
 p.nombrehijodiscapacidad from empleadohijodiscapacidad h
 inner join empleado e on e.codigoempleado=h.codigoempleado
-inner join hijodiscapacidad p on h.codigohijodiscapacidad = p.codigohijodiscapacidad ]]>
+inner join hijodiscapacidad p on h.codigohijodiscapacidad = p.codigohijodiscapacidad]]>
 	</queryString>
 	<field name="codigoempleado" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -46,123 +49,131 @@ inner join hijodiscapacidad p on h.codigohijodiscapacidad = p.codigohijodiscapac
 	<title>
 		<band height="105" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="a0dbe5a9-0228-4d87-aec6-d782086fdf42" x="351" y="59" width="260" height="20"/>
-				<textElement/>
+				<reportElement x="331" y="20" width="260" height="20" uuid="a0dbe5a9-0228-4d87-aec6-d782086fdf42"/>
 				<text><![CDATA[MINISTERIO DE JUSTICA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="db6f5eb3-86ed-4034-ba10-eab3fd2e2b42" x="335" y="30" width="222" height="20"/>
-				<textElement/>
+				<reportElement x="351" y="0" width="222" height="20" uuid="db6f5eb3-86ed-4034-ba10-eab3fd2e2b42"/>
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="4029d439-49b0-4518-9158-407c5b425ee8" x="389" y="50" width="84" height="20"/>
-				<textElement/>
+				<reportElement x="405" y="40" width="84" height="20" uuid="4029d439-49b0-4518-9158-407c5b425ee8"/>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<image>
-				<reportElement uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402" x="697" y="0" width="105" height="60"/>
+				<reportElement x="682" y="0" width="105" height="86" uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c" x="0" y="0" width="193" height="105"/>
+				<reportElement x="0" y="0" width="176" height="86" uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="75" splitType="Stretch">
+		<band height="112" splitType="Stretch">
 			<textField>
-				<reportElement uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49" x="675" y="35" width="80" height="20"/>
+				<reportElement x="667" y="20" width="80" height="20" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="d63d0eb3-1543-473d-a0be-53844c71f01f" x="755" y="35" width="40" height="20"/>
-				<textElement/>
+				<reportElement x="747" y="20" width="40" height="20" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce" x="236" y="7" width="382" height="20"/>
-				<textElement/>
+				<reportElement x="236" y="7" width="337" height="20" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
 				<text><![CDATA[Reporte de Empleados con Hijos con Capacidades Especiales]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73" x="251" y="42" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="202" y="35" width="42" height="20" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="490e45c9-0353-42d5-8b19-b6879e26d467" x="457" y="42" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="457" y="35" width="42" height="20" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="8ab75876-80ee-4d3e-8042-58f322695998" x="575" y="42" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="499" y="35" width="100" height="20" uuid="8ab75876-80ee-4d3e-8042-58f322695998"/>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="defd1f57-b9e1-4411-9a1b-4f605b930187" x="629" y="7" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="686" y="0" width="100" height="20" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="444789e4-36d6-48a7-aa94-5a0d710aad34" x="357" y="42" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="251" y="35" width="100" height="20" uuid="444789e4-36d6-48a7-aa94-5a0d710aad34"/>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="649" y="40" width="48" height="20" uuid="f813226a-3dcc-47ee-a8b5-50cf41c5cbc1"/>
+				<text><![CDATA[Usuario:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="702" y="40" width="85" height="20" uuid="7431e4b3-ba84-41bd-b766-8c6262d8817c"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="637" y="2" width="49" height="20" uuid="d5f71ce2-59e8-4bc2-94a2-bc5e9e85d357"/>
+				<text><![CDATA[Fecha:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="12" y="35" width="100" height="20" uuid="f183d9ef-13ec-47b9-9325-700925b66e52"/>
+				<text><![CDATA[rpt_ehce]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="29" splitType="Stretch">
+			<rectangle>
+				<reportElement x="2" y="2" width="800" height="20" uuid="11415a8b-8e55-4063-8a00-78fc6e1c8c4a"/>
+			</rectangle>
 			<staticText>
-				<reportElement uuid="7d5ce8fa-46e5-4d3c-91ca-ac84bd169b2e" x="138" y="22" width="113" height="20"/>
-				<textElement/>
+				<reportElement x="13" y="0" width="113" height="20" uuid="7d5ce8fa-46e5-4d3c-91ca-ac84bd169b2e"/>
 				<text><![CDATA[Codigo de Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="766c785a-b6c8-4008-a2c9-285473e894d0" x="289" y="22" width="138" height="20"/>
-				<textElement/>
+				<reportElement x="176" y="0" width="138" height="20" uuid="766c785a-b6c8-4008-a2c9-285473e894d0"/>
 				<text><![CDATA[Nombre de Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a05511e5-1861-4959-a097-bed05db3d284" x="451" y="22" width="124" height="20"/>
-				<textElement/>
+				<reportElement x="388" y="0" width="135" height="20" uuid="a05511e5-1861-4959-a097-bed05db3d284"/>
 				<text><![CDATA[Tipo de Discapacidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f9a14dd0-046e-47fc-ab36-2052b06d71cf" x="611" y="22" width="171" height="20"/>
-				<textElement/>
+				<reportElement x="611" y="0" width="171" height="20" uuid="f9a14dd0-046e-47fc-ab36-2052b06d71cf"/>
 				<text><![CDATA[Nombre de Hijo Con Discapacidad]]></text>
 			</staticText>
+			<line>
+				<reportElement x="159" y="2" width="1" height="22" uuid="2b3c3378-6314-4f1f-b469-be94bc2ad8f1"/>
+			</line>
+			<line>
+				<reportElement x="372" y="2" width="1" height="22" uuid="57b98ae4-7444-4021-bdb7-b1882870fdf4"/>
+			</line>
+			<line>
+				<reportElement x="598" y="0" width="1" height="22" uuid="762df862-09e7-40dc-b4e0-1f6bd051e4b3"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch">
+		<band height="23" splitType="Stretch">
 			<textField>
-				<reportElement uuid="653b80f4-a65b-4588-ac96-59a7e8de9d0b" x="136" y="55" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="19" y="0" width="100" height="20" uuid="8591ebf6-9f70-425b-836d-b0a7c8e29eb7"/>
 				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="8591ebf6-9f70-425b-836d-b0a7c8e29eb7" x="138" y="36" width="100" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="ef8906af-28e9-4801-82ac-143df59c0611" x="289" y="36" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="176" y="0" width="100" height="20" uuid="ef8906af-28e9-4801-82ac-143df59c0611"/>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="7577289a-031a-46f3-a27d-7efce72a54a0" x="451" y="36" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="388" y="0" width="117" height="20" uuid="7577289a-031a-46f3-a27d-7efce72a54a0"/>
 				<textFieldExpression><![CDATA[$F{tipodiscapacidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="de99b313-a212-412c-8fd1-d9d805e7358f" x="611" y="36" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="611" y="0" width="100" height="20" uuid="de99b313-a212-412c-8fd1-d9d805e7358f"/>
 				<textFieldExpression><![CDATA[$F{nombrehijodiscapacidad}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -173,27 +184,28 @@ inner join hijodiscapacidad p on h.codigohijodiscapacidad = p.codigohijodiscapac
 	<pageFooter>
 		<band height="54" splitType="Stretch">
 			<line>
-				<reportElement uuid="a548bbc2-78eb-42ed-b2ed-3e32f4b3d63f" x="0" y="49" width="811" height="5"/>
+				<reportElement x="0" y="49" width="811" height="5" uuid="a548bbc2-78eb-42ed-b2ed-3e32f4b3d63f"/>
 			</line>
 		</band>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch">
 			<textField>
-				<reportElement uuid="414c12b5-bf5e-47e4-846d-607e2c1626a0" x="649" y="17" width="80" height="20"/>
+				<reportElement x="649" y="5" width="80" height="20" uuid="414c12b5-bf5e-47e4-846d-607e2c1626a0"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="316ce86a-a98a-43ff-8585-bc1380d26aac" x="729" y="17" width="40" height="20"/>
-				<textElement/>
+				<reportElement x="729" y="5" width="40" height="20" uuid="316ce86a-a98a-43ff-8585-bc1380d26aac"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement uuid="b4d2a374-0ef3-492f-99d2-ae1e1d29c79c" x="19" y="16" width="100" height="20"/>
-				<textElement/>
-				<text><![CDATA[Total Registros]]></text>
-			</staticText>
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement mode="Opaque" x="12" y="3" width="555" height="13" backcolor="#FFFFFF" uuid="92bf961d-d003-49c6-926c-58c79f569cbe"/>
+				<textElement>
+					<font fontName="Times New Roman" isUnderline="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total de Registros:    " + $V{COLUMN_COUNT}]]></textFieldExpression>
+			</textField>
 		</band>
 	</summary>
 </jasperReport>
