--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_pensionado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_pensionado.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e2ab7c88-ec1e-4664-8b48-0ba3162a7a04">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.331000000000001"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<queryString language="SQL">
@@ -24,7 +24,7 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=3]]>
 		<band/>
 	</background>
 	<title>
-		<band height="72">
+		<band height="106">
 			<textField>
 				<reportElement x="464" y="30" width="74" height="20" uuid="9b4c84c3-5c3c-43be-819c-a5f1e3e55e6e"/>
 				<textElement textAlignment="Right">
@@ -78,13 +78,14 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=3]]>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement positionType="FixRelativeToBottom" x="-40" y="67" width="615" height="3" uuid="71f6ad6b-f0e7-4af0-b93d-e2dcb4100f8a"/>
-			</line>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="1"/>
+		<band height="16">
+			<line>
+				<reportElement positionType="FixRelativeToBottom" x="6" y="13" width="547" height="3" uuid="71f6ad6b-f0e7-4af0-b93d-e2dcb4100f8a"/>
+			</line>
+		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="21">
